perforce_swarm/app/assets/stylesheets/application.scss
/*
 * Prepend GitLab Styles
 *= require "../../../../app/assets/stylesheets/application"
 */

/* Bootstrap variables and mixins that we can reference in our own files */
@import "bootstrap/variables";
@import "bootstrap/mixins";

/* Our own boostrap style overrides */
@import "perforce_swarm/bootstrap";

/* Styles for our navbar */
@import "perforce_swarm/navbar";

/* Styles for the sidebar */
@import "perforce_swarm/sidebar";

/* Require login styles */
@import "perforce_swarm/login";

/* Include version check flash messages */
@import "perforce_swarm/version_check";

/* Include project page tweaks */
@import "perforce_swarm/projects";

i.fa-helix-icon-white {
  height: 13px;
  width: 8px;
  background: image-url('helix-icon-white.png') center center;
  margin-right: 3px;
}

ul.sidebar-subnav i.fa-helix-icon-white {
  width: 8px !important;
  margin-left: 3px;
}

